--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/goulash.html" target="_blank" rel="noreferrer">Goulash</a>
+    <a href="recipes/salad.html" target="_blank" rel="noreferrer">Greek Salad</a>
 </body>
 </html>
