Changed Goulash to Fish and Chips
Replaced text and image. The goulash image selection was disappointing. Plus, fish and chips is just better.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/goulash.html" target="_blank" rel="noreferrer">Goulash</a>
+    <a href="recipes/fish.html" target="_blank" rel="noreferrer">Fish and Chips</a>
     <a href="recipes/salad.html" target="_blank" rel="noreferrer">Greek Salad</a>
 </body>
 </html>
