--- a/recipes/fish.html
+++ b/recipes/fish.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goulash</title>
+    <title>Fish and Chips</title>
 </head>
 <body>
-    <h1>Goulash</h1>
-    <img src="goulash.jpeg" alt="Goulash" width="200px" height="200px">
+    <h1>Fish and Chips</h1>
+    <img src="fish.jpg" alt="Fish and chips" width="auto" height="200px">
     <h3>Description</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatum autem provident ab modi voluptas nam doloremque eaque laudantium nulla natus mollitia ullam quod adipisci commodi minus cupiditate, fuga iste.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore molestias iure, ipsum officia tenetur fugiat dolorem facilis cum eaque excepturi at nesciunt odio tempora iste cumque aspernatur voluptatum beatae ab.</p>
