--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/fish.html" target="_blank" rel="noreferrer">Fish and Chips</a>
-    <a href="recipes/salad.html" target="_blank" rel="noreferrer">Greek Salad</a>
+    <ul>
+        <li><a href="recipes/fish.html" target="_blank" rel="noreferrer">Fish and Chips</a></li>
+        <li><a href="recipes/salad.html" target="_blank" rel="noreferrer">Greek Salad</a></li>
+        <li><a href="recipes/pie.html" target="_blank" rel="noreferrer">Lemon Meringue Pie</a></li>
+    </ul>
 </body>
 </html>
